syntax = "proto3";

package anduril.tasks.v2;

import "anduril/tasks/v2/objective.pub.proto";
import "anduril/tasks/v2/shared/isr.pub.proto";

option go_package = "ghe.anduril.dev/anduril/andurilapis-go/anduril/tasks/v2;tasks";
option java_multiple_files = true;
option java_package = "com.anduril.tasks.v2";

// Maps to BREVITY code Marshal.
// Establish(ed) at a specific point, typically used to posture forces in preparation for an offensive operation.
message Marshal {
  // Objective to Marshal to.
  Objective objective = 1;
}

// Maps to UCI code RoutePlan.
// Used to command a platform between locations by requesting to make this RoutePlan the single primary active route.
message Transit {
  RoutePlan plan = 1;
}

message RoutePlan {
  Route route = 1;
}

message Route {
  repeated PathSegment path = 1;
}

message PathSegment {
  oneof end_point {
    Waypoint waypoint = 1;
    Loiter loiter = 2;
  }
}

message Waypoint {
  oneof point {
    Point lla_point = 1;
  }
}

message SetLaunchRoute {
  RoutePlan plan = 1;
  LaunchTrackingMode tracking_mode = 2;
}

enum LaunchTrackingMode {
  LAUNCH_TRACKING_MODE_INVALID = 0;
  LAUNCH_TRACKING_MODE_GO_TO_WAYPOINT = 1;
  LAUNCH_TRACKING_MODE_TRACK_TO_WAYPOINT = 2;
}
